--- a/6-serocatalytic.qmd
+++ b/6-serocatalytic.qmd
@@ -501,6 +501,10 @@ k_mean2 <- round(dataSn2$mean_b_k_Intercept, digits=2)[1]
 k_95CI2 <-  paste0(sep="","(", round(dataSn2$`95%|_b_k_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_k_Intercept`,digits=2),")")[1]
 mab_mean2 <- round(dataSn2$mean_b_mab0_Intercept, digits=2)[1]
 mab_95CI2 <-paste0(sep="","(", round(dataSn2$`95%|_b_mab0_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_mab0_Intercept`,digits=2),")")[1]
+r_mean2 <- round(dataSn2$mean_b_r_Intercept, digits=2)[1]
+r_95CI2 <-paste0(sep="","(", round(dataSn2$`95%|_b_r_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_r_Intercept`,digits=2),")")[1]
+lambdaB_mean2 <- round(dataSn2$mean_b_lambdaB_Intercept, digits=2)[1]
+lambdaB_95CI2 <-paste0(sep="","(", round(dataSn2$`95%|_b_lambdaB_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_lambdaB_Intercept`,digits=2),")")[1]
 ninf0_2 <- dataSn2 %>% filter(AGEGROUP_mth=="(0,1]")
 ninf06_2 <- dataSn2 %>% filter(AGEGROUP_mth=="(6,7]")
 ninf12_2 <- dataSn2 %>% filter(AGEGROUP_mth=="(12,13]")
@@ -516,12 +520,32 @@ ninf06_Ken2 <- dataSnKen2 %>% filter(AGEGROUP_mth=="(6,7]")
 ninf12_Ken2 <- dataSnKen2 %>% filter(AGEGROUP_mth=="(12,13]")
 ninf24_Ken2 <- dataSnKen2 %>% filter(AGEGROUP_mth=="(24,25]")
 ninf60_Ken2 <- dataSnKen2 %>% filter(AGEGROUP_mth=="(59,60]")
+i_mean2K <- round(dataSnKen2$mean_b_i_Intercept, digits=2)[1]
+i_95CI2K <- paste0(sep="","(", round(dataSnKen2$`95%|_b_i_Intercept`,digits=2)," - ", round(dataSnKen2$`|95%_b_i_Intercept`,digits=2),")")[1]
+k_mean2K <- round(dataSnKen2$mean_b_k_Intercept, digits=2)[1]
+k_95CI2K <-  paste0(sep="","(", round(dataSnKen2$`95%|_b_k_Intercept`,digits=2)," - ", round(dataSnKen2$`|95%_b_k_Intercept`,digits=2),")")[1]
+mab_mean2K <- round(dataSnKen2$mean_b_mab0_Intercept, digits=2)[1]
+mab_95CI2K <-paste0(sep="","(", round(dataSnKen2$`95%|_b_mab0_Intercept`,digits=2)," - ", round(dataSnKen2$`|95%_b_mab0_Intercept`,digits=2),")")[1]
+r_mean2K <- round(dataSnKen2$mean_b_r_Intercept, digits=2)[1]
+r_95CI2K <-paste0(sep="","(", round(dataSnKen2$`95%|_b_r_Intercept`,digits=2)," - ", round(dataSnKen2$`|95%_b_r_Intercept`,digits=2),")")[1]
+lambdaB_mean2K <- round(dataSnKen2$mean_b_lambdaB_Intercept, digits=2)[1]
+lambdaB_95CI2K <-paste0(sep="","(", round(dataSnKen2$`95%|_b_lambdaB_Intercept`,digits=2)," - ", round(dataSnKen2$`|95%_b_lambdaB_Intercept`,digits=2),")")[1]
 
 ninf0_BF2 <- dataSnBF2 %>% filter(AGEGROUP_mth=="(0,1]")
 ninf06_BF2 <- dataSnBF2 %>% filter(AGEGROUP_mth=="(6,7]")
 ninf12_BF2 <- dataSnBF2 %>% filter(AGEGROUP_mth=="(12,13]")
 ninf24_BF2 <- dataSnBF2 %>% filter(AGEGROUP_mth=="(24,25]")
 ninf60_BF2 <- dataSnBF2 %>% filter(AGEGROUP_mth=="(59,60]")
+i_mean2B <- round(dataSnBF2$mean_b_i_Intercept, digits=2)[1]
+i_95CI2B <- paste0(sep="","(", round(dataSnBF2$`95%|_b_i_Intercept`,digits=2)," - ", round(dataSnBF2$`|95%_b_i_Intercept`,digits=2),")")[1]
+k_mean2B <- round(dataSnBF2$mean_b_k_Intercept, digits=2)[1]
+k_95CI2B <-  paste0(sep="","(", round(dataSnBF2$`95%|_b_k_Intercept`,digits=2)," - ", round(dataSnBF2$`|95%_b_k_Intercept`,digits=2),")")[1]
+mab_mean2B <- round(dataSnBF2$mean_b_mab0_Intercept, digits=2)[1]
+mab_95CI2B <-paste0(sep="","(", round(dataSnBF2$`95%|_b_mab0_Intercept`,digits=2)," - ", round(dataSnBF2$`|95%_b_mab0_Intercept`,digits=2),")")[1]
+r_mean2B <- round(dataSnBF2$mean_b_r_Intercept, digits=2)[1]
+r_95CI2B <-paste0(sep="","(", round(dataSnBF2$`95%|_b_r_Intercept`,digits=2)," - ", round(dataSnBF2$`|95%_b_r_Intercept`,digits=2),")")[1]
+lambdaB_mean2B <- round(dataSnBF2$mean_b_lambdaB_Intercept, digits=2)[1]
+lambdaB_95CI2B <-paste0(sep="","(", round(dataSnBF2$`95%|_b_lambdaB_Intercept`,digits=2)," - ", round(dataSnBF2$`|95%_b_lambdaB_Intercept`,digits=2),")")[1]
 
 #### loo
 loo_all <- import(here("data", "6_data","loo_all.csv"))
@@ -539,11 +563,11 @@ Cross-sectional samples were analysed for `{r} total` Malawian children 0-60 mon
 
 ### Model 1: Constant force of infection
 
-Model fitting to the observed antibody data is shown in @fig-fit1. The posterior chains are shown in @fig-posteriors1. The posterior distributions were i, k and mab are shown in @fig-posteriors1; the mean for the posterior distribution of i was `{r} i_mean1`, with 95% credible intervals (CI) `{r} i_95CI1`, the mean for k was `{r} k_mean1` & 95% CI `{r} k_95CI1`, and the mean for mab was `{r} mab_mean1` with 95% CI `{r} mab_95CI1`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit1. Model 1 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_1$ninf_MEAN,digits = 2))`, rising to `{r} print(round(ninf06_1$ninf_MEAN,digits = 2))` at 6 months, `{r} print(round(ninf12_1$ninf_MEAN,digits = 2))` at 12 months, `{r} print(round(ninf24_1$ninf_MEAN,digits = 2))` at 24 months, and `{r} print(round(ninf60_1$ninf_MEAN,digits = 2))` at 60 months. This corresponds to estimated `{r} print(round(ninf0_1$ninf_MEAN*ninf0_1$MIDAGE,digits = 2))` , `{r} print(round(ninf06_1$ninf_MEAN*ninf06_1$MIDAGE,digits = 2))`, `{r} print(round(ninf12_1$ninf_MEAN*ninf12_1$MIDAGE,digits = 2))`, `{r} print(round(ninf24_1$ninf_MEAN*ninf24_1$MIDAGE,digits = 2))` and `{r} print(round(ninf60_1$ninf_MEAN*ninf60_1$MIDAGE,digits = 2))` cumulative salmonella infections inducing serotype-specific IgG response at age 0, 6, 12, 24 and 60 months respectively.
+Model fitting to the observed antibody data is shown in @fig-fit1. The posterior chains are shown in @fig-posteriors1. The posterior distributions were i, k and mab are shown in @fig-posteriors1; the mean for the posterior distribution of i was `{r} i_mean1`, with 95% credible intervals (CI) `{r} i_95CI1`, the mean for k was `{r} k_mean1` & 95% CI `{r} k_95CI1`, and the mean for mab was `{r} mab_mean1` with 95% CI `{r} mab_95CI1`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit1. Model 1 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_1$ninf_MEAN,digits = 2))`, rising to `{r} print(round(ninf06_1$ninf_MEAN,digits = 2))` at 6 months, `{r} print(round(ninf12_1$ninf_MEAN,digits = 2))` at 12 months, `{r} print(round(ninf24_1$ninf_MEAN,digits = 2))` at 24 months, and `{r} print(round(ninf60_1$ninf_MEAN,digits = 2))` at 60 months. This corresponds to estimated `{r} print(round(ninf0_1$ninf_MEAN*ninf0_1$MIDAGE,digits = 2))` , `{r} print(round(ninf06_1$ninf_MEAN*ninf06_1$MIDAGE,digits = 2))`, `{r} print(round(ninf12_1$ninf_MEAN*ninf12_1$MIDAGE,digits = 2))`, `{r} print(round(ninf24_1$ninf_MEAN*ninf24_1$MIDAGE,digits = 2))` and `{r} print(round(ninf60_1$ninf_MEAN*ninf60_1$MIDAGE,digits = 2))` cumulative salmonella infections inducing *S*. typhimurium specific IgG response at age 0, 6, 12, 24 and 60 months respectively.
 
 ### Model 2: Changing force of infection with age
 
-The posterior distributions were i, k and mab are shown in @fig-posteriors2; the mean for i was `{r} i_mean2`, with 95% credible intervals (CI) `{r} i_95CI2`, the mean for k was `{r} k_mean2` & 95% CI `{r} k_95CI2`, and the mean for mab was `{r} mab_mean2` & 95% CI `{r} mab_95CI2`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit2. Model 2 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf0_2$ninf_lo,digits = 2))` - `{r} print(round(ninf0_2$ninf_hi,digits = 2))`), rising to `{r} print(round(ninf06_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf06_2$ninf_lo,digits = 2))` - `{r} print(round(ninf06_2$ninf_hi,digits = 2))`) at 6 months, `{r} print(round(ninf12_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf12_2$ninf_lo,digits = 2))` - `{r} print(round(ninf12_2$ninf_hi,digits = 2))`) at 12 months, `{r} print(round(ninf24_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf24_2$ninf_lo,digits = 2))` - `{r} print(round(ninf24_2$ninf_hi,digits = 2))`), at 24 months, and `{r} print(round(ninf60_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf60_2$ninf_lo,digits = 2))` - `{r} print(round(ninf60_2$ninf_hi,digits = 2))`) at 60 months. This corresponds to estimated `{r} print(round(ninf0_2$ninf_MEAN*ninf0_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf0_2$ninf_lo*ninf0_2$MIDAGE,digits = 2))` - `{r} print(round(ninf0_2$ninf_hi*ninf0_2$MIDAGE,digits = 2))`), `{r} print(round(ninf06_2$ninf_MEAN*ninf06_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf06_2$ninf_lo*ninf06_2$MIDAGE,digits = 2))` - `{r} print(round(ninf06_2$ninf_hi*ninf06_2$MIDAGE,digits = 2))`), `{r} print(round(ninf12_2$ninf_MEAN*ninf12_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf12_2$ninf_lo*ninf12_2$MIDAGE,digits = 2))` - `{r} print(round(ninf12_2$ninf_hi*ninf12_2$MIDAGE,digits = 2))`), `{r} print(round(ninf24_2$ninf_MEAN*ninf24_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf24_2$ninf_lo*ninf24_2$MIDAGE,digits = 2))` - `{r} print(round(ninf24_2$ninf_hi*ninf24_2$MIDAGE,digits = 2))`) and `{r} print(round(ninf60_2$ninf_MEAN*ninf60_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf60_2$ninf_lo*ninf60_2$MIDAGE,digits = 2))` - `{r} print(round(ninf60_2$ninf_hi*ninf60_2$MIDAGE,digits = 2))`) cumulative salmonella infections inducing serotype-specific IgG response at age 0, 6, 12, 24 and 60 months respectively.
+The posterior distributions were i, k and mab are shown in @fig-posteriors2; the mean for i was `{r} i_mean2`, with 95% credible intervals (CI) `{r} i_95CI2`, the mean for k was `{r} k_mean2` 95% CI `{r} k_95CI2`, and the mean for mab was `{r} mab_mean2` 95% CI `{r} mab_95CI2`. The posterior means for the two additional parameters were lambdaB mean `{r} lambdaB_mean2` 95% CI `{r} lambdaB_95CI2`, and r mean was`{r} r_mean2` 95% CI `{r} r_95CI2`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit2. Model 2 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf0_2$ninf_lo,digits = 2))` - `{r} print(round(ninf0_2$ninf_hi,digits = 2))`), rising to `{r} print(round(ninf06_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf06_2$ninf_lo,digits = 2))` - `{r} print(round(ninf06_2$ninf_hi,digits = 2))`) at 6 months, `{r} print(round(ninf12_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf12_2$ninf_lo,digits = 2))` - `{r} print(round(ninf12_2$ninf_hi,digits = 2))`) at 12 months, `{r} print(round(ninf24_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf24_2$ninf_lo,digits = 2))` - `{r} print(round(ninf24_2$ninf_hi,digits = 2))`), at 24 months, and `{r} print(round(ninf60_2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf60_2$ninf_lo,digits = 2))` - `{r} print(round(ninf60_2$ninf_hi,digits = 2))`) at 60 months. This corresponds to estimated `{r} print(round(ninf0_2$ninf_MEAN*ninf0_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf0_2$ninf_lo*ninf0_2$MIDAGE,digits = 2))` - `{r} print(round(ninf0_2$ninf_hi*ninf0_2$MIDAGE,digits = 2))`), `{r} print(round(ninf06_2$ninf_MEAN*ninf06_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf06_2$ninf_lo*ninf06_2$MIDAGE,digits = 2))` - `{r} print(round(ninf06_2$ninf_hi*ninf06_2$MIDAGE,digits = 2))`), `{r} print(round(ninf12_2$ninf_MEAN*ninf12_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf12_2$ninf_lo*ninf12_2$MIDAGE,digits = 2))` - `{r} print(round(ninf12_2$ninf_hi*ninf12_2$MIDAGE,digits = 2))`), `{r} print(round(ninf24_2$ninf_MEAN*ninf24_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf24_2$ninf_lo*ninf24_2$MIDAGE,digits = 2))` - `{r} print(round(ninf24_2$ninf_hi*ninf24_2$MIDAGE,digits = 2))`) and `{r} print(round(ninf60_2$ninf_MEAN*ninf60_2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf60_2$ninf_lo*ninf60_2$MIDAGE,digits = 2))` - `{r} print(round(ninf60_2$ninf_hi*ninf60_2$MIDAGE,digits = 2))`) cumulative salmonella infections inducing *S*. typhimurium-specific IgG response at age 0, 6, 12, 24 and 60 months respectively.
 
 ### Model comparison
 
@@ -551,7 +575,9 @@ Model 2 was selected as the best fit model; model 1 had an ELPD difference of `{
 
 ## Models for other sites
 
-Both model 1 and 2 were run for each of the other VacciNTS sites; Burkina Faso and Kenya, model comparisons are shown in @tbl-sites. Model 2 was selected as best fit across all sites. In Kenya, model 2 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf0_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf0_Ken2$ninf_hi,digits = 2))`), rising to `{r} print(round(ninf06_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf06_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf06_Ken2$ninf_hi,digits = 2))`) at 6 months, `{r} print(round(ninf12_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf12_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf12_Ken2$ninf_hi,digits = 2))`) at 12 months, `{r} print(round(ninf24_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf24_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf24_Ken2$ninf_hi,digits = 2))`), at 24 months, and `{r} print(round(ninf60_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf60_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf60_Ken2$ninf_hi,digits = 2))`) at 60 months. This corresponds to estimated `{r} print(round(ninf0_Ken2$ninf_MEAN*ninf0_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf0_Ken2$ninf_lo*ninf0_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf0_Ken2$ninf_hi*ninf0_Ken2$MIDAGE,digits = 2))`), `{r} print(round(ninf06_Ken2$ninf_MEAN*ninf06_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf06_Ken2$ninf_lo*ninf06_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf06_Ken2$ninf_hi*ninf06_Ken2$MIDAGE,digits = 2))`), `{r} print(round(ninf12_Ken2$ninf_MEAN*ninf12_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf12_Ken2$ninf_lo*ninf12_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf12_Ken2$ninf_hi*ninf12_Ken2$MIDAGE,digits = 2))`), `{r} print(round(ninf24_Ken2$ninf_MEAN*ninf24_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf24_Ken2$ninf_lo*ninf24_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf24_Ken2$ninf_hi*ninf24_Ken2$MIDAGE,digits = 2))`) and `{r} print(round(ninf60_Ken2$ninf_MEAN*ninf60_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf60_Ken2$ninf_lo*ninf60_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf60_Ken2$ninf_hi*ninf60_Ken2$MIDAGE,digits = 2))`) cumulative salmonella infections inducing serotype-specific IgG response at age 0, 6, 12, 24 and 60 months respectively. In Burkina Faso, model 2 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf0_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf0_BF2$ninf_hi,digits = 2))`), rising to `{r} print(round(ninf06_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf06_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf06_BF2$ninf_hi,digits = 2))`) at 6 months, `{r} print(round(ninf12_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf12_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf12_BF2$ninf_hi,digits = 2))`) at 12 months, `{r} print(round(ninf24_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf24_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf24_BF2$ninf_hi,digits = 2))`), at 24 months, and `{r} print(round(ninf60_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf60_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf60_BF2$ninf_hi,digits = 2))`) at 60 months. This corresponds to estimated `{r} print(round(ninf0_BF2$ninf_MEAN*ninf0_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf0_BF2$ninf_lo*ninf0_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf0_BF2$ninf_hi*ninf0_BF2$MIDAGE,digits = 2))`), `{r} print(round(ninf06_BF2$ninf_MEAN*ninf06_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf06_BF2$ninf_lo*ninf06_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf06_BF2$ninf_hi*ninf06_BF2$MIDAGE,digits = 2))`), `{r} print(round(ninf12_BF2$ninf_MEAN*ninf12_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf12_BF2$ninf_lo*ninf12_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf12_BF2$ninf_hi*ninf12_BF2$MIDAGE,digits = 2))`), `{r} print(round(ninf24_BF2$ninf_MEAN*ninf24_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf24_BF2$ninf_lo*ninf24_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf24_BF2$ninf_hi*ninf24_BF2$MIDAGE,digits = 2))`) and `{r} print(round(ninf60_BF2$ninf_MEAN*ninf60_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf60_BF2$ninf_lo*ninf60_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf60_BF2$ninf_hi*ninf60_BF2$MIDAGE,digits = 2))`) cumulative salmonella infections inducing serotype-specific IgG response at age 0, 6, 12, 24 and 60 months respectively.
+Both model 1 and 2 were run for each of the other VacciNTS sites; Burkina Faso and Kenya, model comparisons are shown in @tbl-sites. Model 2 was selected as best fit across all sites. The posterior distributions for Kenya were i mean `{r} i_mean2K` 95% CI `{r} i_95CI2K`, the mean for k was `{r} k_mean2K` 95% CI `{r} k_95CI2K`, mean for mab was `{r} mab_mean2K` 95% CI `{r} mab_95CI2K`, lambdaB mean was `{r} lambdaB_mean2K`95% CI `{r} lambdaB_95CI2K`, and r mean was `{r} r_mean2K` 95% CI `{r} r_95CI2K`. The posterior distributions for Burkina Faso were i mean `{r} i_mean2B` 95% CI `{r} i_95CI2B`, the mean for k was `{r} k_mean2B` 95% CI `{r} k_95CI2B`, mean for mab was `{r} mab_mean2B` 95% CI `{r} mab_95CI2B`, lambdaB mean was `{r} lambdaB_mean2B` 95% CI `{r} lambdaB_95CI2B`, and r mean was `{r} r_mean2K` 95% CI `{r} r_95CI2B`.
+
+In Kenya, model 2 estimated that the proportion of children who had a salmonella infection inducing *S*. typhimurium-specific IgG response at age 0 was `{r} print(round(ninf0_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf0_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf0_Ken2$ninf_hi,digits = 2))`), rising to `{r} print(round(ninf06_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf06_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf06_Ken2$ninf_hi,digits = 2))`) at 6 months, `{r} print(round(ninf12_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf12_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf12_Ken2$ninf_hi,digits = 2))`) at 12 months, `{r} print(round(ninf24_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf24_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf24_Ken2$ninf_hi,digits = 2))`), at 24 months, and `{r} print(round(ninf60_Ken2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf60_Ken2$ninf_lo,digits = 2))` - `{r} print(round(ninf60_Ken2$ninf_hi,digits = 2))`) at 60 months. This corresponds to estimated `{r} print(round(ninf0_Ken2$ninf_MEAN*ninf0_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf0_Ken2$ninf_lo*ninf0_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf0_Ken2$ninf_hi*ninf0_Ken2$MIDAGE,digits = 2))`), `{r} print(round(ninf06_Ken2$ninf_MEAN*ninf06_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf06_Ken2$ninf_lo*ninf06_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf06_Ken2$ninf_hi*ninf06_Ken2$MIDAGE,digits = 2))`), `{r} print(round(ninf12_Ken2$ninf_MEAN*ninf12_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf12_Ken2$ninf_lo*ninf12_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf12_Ken2$ninf_hi*ninf12_Ken2$MIDAGE,digits = 2))`), `{r} print(round(ninf24_Ken2$ninf_MEAN*ninf24_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf24_Ken2$ninf_lo*ninf24_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf24_Ken2$ninf_hi*ninf24_Ken2$MIDAGE,digits = 2))`) and `{r} print(round(ninf60_Ken2$ninf_MEAN*ninf60_Ken2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf60_Ken2$ninf_lo*ninf60_Ken2$MIDAGE,digits = 2))` - `{r} print(round(ninf60_Ken2$ninf_hi*ninf60_Ken2$MIDAGE,digits = 2))`) cumulative salmonella infections inducing serotype-specific IgG response at age 0, 6, 12, 24 and 60 months respectively. In Burkina Faso, model 2 estimated that the proportion of children who had a salmonella infection inducing serotype-specific IgG response at age 0 was `{r} print(round(ninf0_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf0_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf0_BF2$ninf_hi,digits = 2))`), rising to `{r} print(round(ninf06_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf06_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf06_BF2$ninf_hi,digits = 2))`) at 6 months, `{r} print(round(ninf12_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf12_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf12_BF2$ninf_hi,digits = 2))`) at 12 months, `{r} print(round(ninf24_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf24_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf24_BF2$ninf_hi,digits = 2))`), at 24 months, and `{r} print(round(ninf60_BF2$ninf_MEAN,digits = 2))` (95% CI; `{r} print(round(ninf60_BF2$ninf_lo,digits = 2))` - `{r} print(round(ninf60_BF2$ninf_hi,digits = 2))`) at 60 months. This corresponds to estimated `{r} print(round(ninf0_BF2$ninf_MEAN*ninf0_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf0_BF2$ninf_lo*ninf0_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf0_BF2$ninf_hi*ninf0_BF2$MIDAGE,digits = 2))`), `{r} print(round(ninf06_BF2$ninf_MEAN*ninf06_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf06_BF2$ninf_lo*ninf06_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf06_BF2$ninf_hi*ninf06_BF2$MIDAGE,digits = 2))`), `{r} print(round(ninf12_BF2$ninf_MEAN*ninf12_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf12_BF2$ninf_lo*ninf12_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf12_BF2$ninf_hi*ninf12_BF2$MIDAGE,digits = 2))`), `{r} print(round(ninf24_BF2$ninf_MEAN*ninf24_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf24_BF2$ninf_lo*ninf24_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf24_BF2$ninf_hi*ninf24_BF2$MIDAGE,digits = 2))`) and `{r} print(round(ninf60_BF2$ninf_MEAN*ninf60_BF2$MIDAGE,digits = 2))` (95% CI; `{r} print(round(ninf60_BF2$ninf_lo*ninf60_BF2$MIDAGE,digits = 2))` - `{r} print(round(ninf60_BF2$ninf_hi*ninf60_BF2$MIDAGE,digits = 2))`) cumulative salmonella infections inducing serotype-specific IgG response at age 0, 6, 12, 24 and 60 months respectively.
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=6, fig.width = 5, out.width = "5.5in"}
 #| fig-cap: Model 1 outputs using Markov Chain Monte Carlo (MCMC) to estimate model parameters, posterior chains and posterior distributions of parameters i, k, and mab
@@ -564,12 +590,16 @@ postsum1 <- as.data.frame(fit1$fit) %>% ## posteriors
 gg_hist <- ggplot(postsum1, aes(x=value))+
       geom_histogram(fill="lightblue",colour="black",lwd=0.2)+
       facet_wrap(~variable, nrow = 7, scales = "free") +
-      labs(x = "Value", y = "Count")
+      labs(x = "Value", y = "Count") +
+      theme(axis.text = element_text(size = 6),
+           axis.title = element_text(size = 6))
 chains_plot <- as_draws_df(fit1$fit) %>% 
   mcmc_trace(pars = vars(b_mab0_Intercept:sigma), facet_args = list(ncol = 1, strip.position = "left"))+
   #scale_color_pomological() +
   labs(title = "Trace plots") +
-  theme(axis.text = element_text(size = 6))
+  theme(axis.text = element_text(size = 6),
+        axis.title = element_text(size = 6),
+        title = element_text(size=8, face="plain"))
   #theme_pomological_fancy(base_family = "Marck Script") 
 plot_grid(gg_hist, chains_plot,ncol=2)
 ```
@@ -586,12 +616,16 @@ postsum2 <- as.data.frame(fit2$fit) %>% ## posteriors
 gg_hist <- ggplot(postsum2, aes(x=value))+
       geom_histogram(fill="lightblue",colour="black",lwd=0.2)+
       facet_wrap(~variable, nrow = 7, scales = "free") +
-      labs(x = "Value", y = "Count")
+      labs(x = "Value", y = "Count") +
+      theme(axis.text = element_text(size = 6),
+           axis.title = element_text(size = 6))
 chains_plot <- as_draws_df(fit2$fit) %>% 
   mcmc_trace(pars = vars(b_mab0_Intercept:sigma), facet_args = list(ncol = 1, strip.position = "left"))+
   #scale_color_pomological() +
   labs(title = "Trace plots") +
-    theme(axis.text = element_text(size = 6))
+    theme(axis.text = element_text(size = 6),
+          axis.title = element_text(size = 6),
+          title = element_text(size=8, face="plain"))
   #theme_pomological_fancy(base_family = "Marck Script") 
 plot_grid(gg_hist, chains_plot,ncol=2)
 ```
@@ -689,7 +723,9 @@ print(panel1)
 ```
 ## Discussion
 
-This serocatalytic model using non-typhoidal salmonella (NTS) antibody data from children living in endemic settings in sub-Saharan Africa, demonstrates how using cross-sectional age-stratified serological data can be used to understand the mechanisms between the relationship between NTS exposures in children and the aquisition of natural immunity. Different hypotheses can be tested by developing mechanistic models able to explain the observed age-patterns in the serology data. The model fitting to the data was improved assuming that the force of infection (lambda) of enteric NTS infections leading to S. typhimurium specific IgG responses increased around age of weaning (\~6 months). The hypothesis that children have a higher infections with enteric pathogens around the age of weaning, and that this increases exponentially as they become more mobile and able to explore their environment through oral contact is consistent with the observed age-stratified point prevalence of eNTS detected on stool microbiology in the SAiNTS study cohort in Malawi as demonstrated in chapter 5 (cross-ref stool diagram). However, the figure shown in chapter 5 shows exposure to all NTS serovars, if we restrict to the immunodominant 04 and 09 . This pattern has also been observed in shigella infections in children 0 - 24 months longitudinally followed up in in the MAL-ED study @fig-MAL_ED [@rogawski_mcquade_epidemiology_2020].
+This serocatalytic model using non-typhoidal salmonella (NTS) antibody data from children living in endemic settings in sub-Saharan Africa, demonstrates how using cross-sectional age-stratified serological data can be used to understand the mechanisms between the relationship between NTS exposures in children and the aquisition of natural immunity. Different hypotheses can be tested by developing mechanistic models able to explain the observed age-patterns in the serology data. The model fitting to the data was improved assuming that the force of infection (lambda) of enteric NTS infections leading to S. typhimurium specific IgG responses increased around age of weaning (\~6 months). The hypothesis that children have a higher infections with enteric pathogens around the age of weaning, and that this increases exponentially as they become more mobile and able to explore their environment through oral contact is consistent with the observed age-stratified point prevalence of eNTS detected on stool microbiology in the SAiNTS study cohort in Malawi as demonstrated in chapter 5 (\@fig-NTSculture). Although the figure shown in chapter 5 shows the age-distribution of all NTS serovars, the proportions of 04 and 09 antigen positive stool samples appear to be distributed similarly. This sigmoidal pattern of rapidly increasing stool postivity at weaning then plateau after 24 months has also been observed in shigella infections in children 0 - 24 months longitudinally followed up in in the MAL-ED study @fig-MAL_ED [@rogawski_mcquade_epidemiology_2020]. There may be other physiological, immunological, and epidemiological host susceptibility age related factors that influence the duration of shedding of enteric NTS stool shedding in younger children compared to older children that may also explain this age pattern, however, the improved model fit assuming sigmoid enteric NTS infection with age, suggests that children are getting more infections inducing a *S*. typhimurium specific IgG response.
+
+Fitting the same model across the other VacciNTS sites, further supported the hypothesis that the changing FOI with age was a better fit to the observed serological data across all 3 sites. The cumulative number of infections for each site
 
 Fecal shedding/ duration of carriage/
 
